@@ -6,43 +6,98 @@
  * redistribution, EXCEPT on the files which belong under the
  * Mozilla public license.
  *
- * $Id: jsVRMLBrowser.c,v 1.23 2006/08/03 19:36:33 crc_canada Exp $
+ * $Id: jsVRMLBrowser.c,v 1.24 2006/08/04 19:50:57 crc_canada Exp $
  *
  */
 
 #include "headers.h"
 #include "jsVRMLBrowser.h"
 
-char FPSstring[10];
+#define JSVERBOSE
+
+/* used in loadURL*/
+void conCat (char *out, char *in) {
+
+	while (strlen (in) > 0) {
+		strcat (out," :loadURLStringBreak:");
+		while (*out != '\0') out++;
+
+		if (*in == '[') in++;
+		while ((*in != '\0') && (*in == ' ')) in++;
+		if (*in == '"') {
+			in++;
+			/* printf ("have the initial quote string here is %s\n",in); */
+			while (*in != '"') { *out = *in; out++; in++; }
+			*out = '\0';
+			/* printf ("found string is :%s:\n",tfilename); */
+		}
+
+		/* skip along to the start of the next name */
+		if (*in == '"') in++;
+		if (*in == ',') in++;
+		if (*in == ']') in++; /* this allows us to leave */
+	}
+}
+
+
+
+void createLoadUrlString(char *out, char *url, char *param) {
+	int commacount1;
+	int commacount2;
+	char *tptr;
+
+	/* mimic the EAI loadURL, java code is:
+        // send along sizes of the Strings
+        SysString = "" + url.length + " " + parameter.length;
+                
+        for (count=0; count<url.length; count++) {
+                SysString = SysString + " :loadURLStringBreak:" + url[count];
+        }       
+
+        for (count=0; count<parameter.length; count++) {
+                SysString = SysString + " :loadURLStringBreak:" + parameter[count];
+        }
+	*/
+	
+	/* find out how many elements there are */
+
+	commacount1 = 0; commacount2 = 0;
+	tptr = url; while (*tptr != '\0') { if (*tptr == '"') commacount1 ++; tptr++; }
+	tptr = param; while (*tptr != '\0') { if (*tptr == '"') commacount2 ++; tptr++; }
+	commacount1 = commacount1 / 2;
+	commacount2 = commacount2 / 2;
+
+	sprintf (out,"%d %d",commacount1,commacount2);
+	
+	/* go to the end of this string */
+	while (*out != '\0') out++;
+
+	/* go through the elements and find which (if any) url exists */	
+	conCat (out,url);
+	while (*out != '\0') out++;
+	conCat (out,param);
+}
+
+
 
 JSBool
 VrmlBrowserInit(JSContext *context, JSObject *globalObj, BrowserNative *brow)
 {
 	JSObject *obj;
-	/* BrowserNative *brow = (BrowserNative *) JS_malloc(context, sizeof(BrowserNative)); */
-	/* brow->sv_js = newSVsv(sv_js); */ /* new duplicate of sv_js */
-	/* brow->magic = BROWMAGIC; */
 
 	#ifdef JSVERBOSE
 		printf("VrmlBrowserInit\n");
 	#endif
 
-	/* why not JS_InitClass ??? */
-	obj = JS_DefineObject(context,
-						  globalObj,
-						  "Browser",
-						  &Browser,
-						  NULL,
-						  JSPROP_ENUMERATE | JSPROP_PERMANENT);
+	obj = JS_DefineObject(context, globalObj, "Browser", &Browser, NULL, 
+			JSPROP_ENUMERATE | JSPROP_PERMANENT);
 	if (!JS_DefineFunctions(context, obj, BrowserFunctions)) {
-		fprintf(stderr,
-				"JS_DefineFunctions failed in VrmlBrowserInit.\n");
+		printf( "JS_DefineFunctions failed in VrmlBrowserInit.\n");
 		return JS_FALSE;
 	}
 
 	if (!JS_SetPrivate(context, obj, brow)) {
-		fprintf(stderr,
-				"JS_SetPrivate failed in VrmlBrowserInit.\n");
+		printf( "JS_SetPrivate failed in VrmlBrowserInit.\n");
 		return JS_FALSE;
 	}
 	return JS_TRUE;
@@ -84,13 +139,15 @@ JSBool
 VrmlBrowserGetCurrentSpeed(JSContext *context, JSObject *obj, uintN argc, jsval *argv, jsval *rval)
 {
 	JSString *_str;
-	char string[10];
+	char string[1000];
 
 	UNUSED(obj);
 	UNUSED(argc);
 	UNUSED(argv);
 
-	sprintf (string,"%f",getCurrentSpeed());
+	/* get the variable updated */
+	getCurrentSpeed();
+	sprintf (string,"%f",BrowserSpeed);
 	_str = JS_NewString(context,string,strlen(string)+1);
 	*rval = STRING_TO_JSVAL(_str);
 	return JS_TRUE;
@@ -101,6 +158,7 @@ JSBool
 VrmlBrowserGetCurrentFrameRate(JSContext *context, JSObject *obj, uintN argc, jsval *argv, jsval *rval)
 {
 	JSString *_str;
+	char FPSstring[10];
 
 	UNUSED(obj);
 	UNUSED(argc);
@@ -114,8 +172,7 @@ VrmlBrowserGetCurrentFrameRate(JSContext *context, JSObject *obj, uintN argc, js
 
 
 JSBool
-VrmlBrowserGetWorldURL(JSContext *context, JSObject *obj,
-					   uintN argc, jsval *argv, jsval *rval)
+VrmlBrowserGetWorldURL(JSContext *context, JSObject *obj, uintN argc, jsval *argv, jsval *rval)
 {
 	JSString *_str;
 
@@ -141,16 +198,9 @@ VrmlBrowserReplaceWorld(JSContext *context, JSObject *obj,
 	char *_c_args = "MFNode nodes",
 		*_costr,
 		*_c_format = "o";
+	char *tptr;
 
-	if ((brow = (BrowserNative *)JS_GetPrivate(context, obj)) == NULL) {
-		printf("JS_GetPrivate failed in VrmlBrowserReplaceWorld.\n");
-		return JS_FALSE;
-	}
-
-	if (brow->magic != BROWMAGIC) {
-		printf("Wrong browser magic!\n");
-		return JS_FALSE;
-	}
+	FUNC_INIT
 
 	if (JS_ConvertArguments(context, argc, argv, _c_format, &_obj)) {
 		if ((_cls = JS_GetClass(_obj)) == NULL) {
@@ -159,23 +209,26 @@ VrmlBrowserReplaceWorld(JSContext *context, JSObject *obj,
 		}
 
 		if (memcmp("MFNode", _cls->name, strlen(_cls->name)) != 0) {
-			fprintf(stderr,
-					"\nIncorrect argument in VrmlBrowserReplaceWorld.\n");
+			printf( "\nIncorrect argument in VrmlBrowserReplaceWorld.\n");
 			return JS_FALSE;
 		}
-		if (!JS_GetProperty(context, _obj, "__handle", &_v)) {
-			fprintf(stderr,
-					"JS_GetProperty failed for \"__handle\" in VrmlBrowserReplaceWorld.\n");
-			return JS_FALSE;
-		}
-		_str = JS_ValueToString(context, _v);
+		_str = JS_ValueToString(context, _obj);
 		_costr = JS_GetStringBytes(_str);
 
-printf ("DPCVA replaceworld\n");/*		doPerlCallMethodVA(brow->sv_js, "jspBrowserReplaceWorld", "s", _costr);*/
+printf ("DPCVA replaceworld str %s \n",_costr);/*		doPerlCallMethodVA(brow->sv_js, "jspBrowserReplaceWorld", "s", _costr);*/
+
+		/* sanitize string, for the EAI_RW call (see EAI_RW code) */
+		tptr = _costr;
+		while (*tptr != '\0') {
+			if(*tptr == '[') *tptr = ' ';
+			if(*tptr == ']') *tptr = ' ';
+			if(*tptr == ',') *tptr = ' ';
+			tptr++;
+		}
+		EAI_RW(_costr);
+
 	} else {
-		fprintf(stderr,
-				"\nIncorrect argument format for replaceWorld(%s).\n",
-				_c_args);
+		printf( "\nIncorrect argument format for replaceWorld(%s).\n", _c_args);
 		return JS_FALSE;
 	}
 	*rval = _rval;
@@ -191,42 +244,26 @@ VrmlBrowserLoadURL(JSContext *context, JSObject *obj,
 	JSObject *_obj[2];
 	JSString *_str[2];
 	JSClass *_cls[2];
-	jsval _rval = INT_TO_JSVAL(0);
 	BrowserNative *brow;
 	char *_c_args = "MFString url, MFString parameter",
 		*_costr[2],
 		*_c_format = "o o";
+	char myBuf[2000];
 
-	if ((brow = (BrowserNative *)JS_GetPrivate(context, obj)) == NULL) {
-		fprintf(stderr,
-				"JS_GetPrivate failed in VrmlBrowserLoadURL.\n");
-		return JS_FALSE;
-	}
+	FUNC_INIT
 
-	if (brow->magic != BROWMAGIC) {
-		fprintf(stderr, "Wrong browser magic!\n");
-		return JS_FALSE;
-	}
-
-	if (JS_ConvertArguments(context,
-							argc,
-							argv,
-							_c_format,
-							&(_obj[0]), &(_obj[1]))) {
+	if (JS_ConvertArguments(context, argc, argv, _c_format, &(_obj[0]), &(_obj[1]))) {
 		if ((_cls[0] = JS_GetClass(_obj[0])) == NULL) {
-			fprintf(stderr,
-					"JS_GetClass failed for arg 0 in VrmlBrowserLoadURL.\n");
+			printf( "JS_GetClass failed for arg 0 in VrmlBrowserLoadURL.\n");
 			return JS_FALSE;
 		}
 		if ((_cls[1] = JS_GetClass(_obj[1])) == NULL) {
-			fprintf(stderr,
-					"JS_GetClass failed for arg 1 in VrmlBrowserLoadURL.\n");
+			printf( "JS_GetClass failed for arg 1 in VrmlBrowserLoadURL.\n");
 			return JS_FALSE;
 		}
 		if (memcmp("MFString", (_cls[0])->name, strlen((_cls[0])->name)) != 0 &&
 			memcmp("MFString", (_cls[1])->name, strlen((_cls[1])->name)) != 0) {
-			fprintf(stderr,
-					"\nIncorrect arguments in VrmlBrowserLoadURL.\n");
+			printf( "\nIncorrect arguments in VrmlBrowserLoadURL.\n");
 			return JS_FALSE;
 		}
 		_str[0] = JS_ValueToString(context, argv[0]);
@@ -234,14 +271,24 @@ VrmlBrowserLoadURL(JSContext *context, JSObject *obj,
 
 		_str[1] = JS_ValueToString(context, argv[1]);
 		_costr[1] = JS_GetStringBytes(_str[1]);
-printf ("DPCVA loadurl\n");/*		doPerlCallMethodVA(brow->sv_js, "jspBrowserLoadURL", "ss", _costr[0], _costr[1]);*/
+
+		/* we use the EAI code for this - so reformat this for the EAI format */
+		extern struct X3D_Anchor EAI_AnchorNode;
+
+		/* make up the URL from what we currently know */
+		createLoadUrlString(myBuf,_costr[0], _costr[1]);
+		createLoadURL(myBuf);
+
+		/* now tell the EventLoop that BrowserAction is requested... */
+		AnchorsAnchor = &EAI_AnchorNode;
+		BrowserAction = TRUE;
+
+
 	} else {
-		fprintf(stderr,
-				"\nIncorrect argument format for loadURL(%s).\n",
-				_c_args);
+		printf( "\nIncorrect argument format for loadURL(%s).\n", _c_args);
 		return JS_FALSE;
 	}
-	*rval = _rval;
+	*rval = INT_TO_JSVAL(0);
 
 	return JS_TRUE;
 }
@@ -255,25 +302,15 @@ VrmlBrowserSetDescription(JSContext *context, JSObject *obj,
 	char *_c, *_c_args = "SFString description", *_c_format = "s";
 	BrowserNative *brow;
 
-	if ((brow = (BrowserNative *)JS_GetPrivate(context, obj)) == NULL) {
-		fprintf(stderr,
-				"JS_GetPrivate failed in VrmlBrowserSetDescription.\n");
-		return JS_FALSE;
-	}
-
-	if (brow->magic != BROWMAGIC) {
-		fprintf(stderr, "Wrong browser magic!\n");
-		return JS_FALSE;
-	}
+	FUNC_INIT
 
 	if (argc == 1 &&
 		JS_ConvertArguments(context, argc, argv, _c_format, &_c)) {
-printf ("DPCVA setbrowserdesc\n");/*		doPerlCallMethodVA(brow->sv_js, "jspBrowserSetDescription", "s", _c);*/
-		*rval = _rval;
+
+		/* we do not do anything with the description. If we ever wanted to, it is in _c */
+		*rval = INT_TO_JSVAL(0);
 	} else {
-		fprintf(stderr,
-				"\nIncorrect argument format for setDescription(%s).\n",
-				_c_args);
+		printf( "\nIncorrect argument format for setDescription(%s).\n", _c_args);
 		return JS_FALSE;
 	}
 	return JS_TRUE;
@@ -281,8 +318,7 @@ printf ("DPCVA setbrowserdesc\n");/*		doPerlCallMethodVA(brow->sv_js, "jspBrowse
 
 
 JSBool
-VrmlBrowserCreateVrmlFromString(JSContext *context, JSObject *obj,
-								uintN argc, jsval *argv, jsval *rval)
+VrmlBrowserCreateVrmlFromString(JSContext *context, JSObject *obj, uintN argc, jsval *argv, jsval *rval)
 {
 	BrowserNative *brow;
 	char *_c, *_c_args = "SFString vrmlSyntax", *_c_format = "s";
@@ -300,15 +336,7 @@ VrmlBrowserCreateVrmlFromString(JSContext *context, JSObject *obj,
 	/* make this a default value */
 	*rval = INT_TO_JSVAL(0);
 
-	if ((brow = (BrowserNative *)JS_GetPrivate(context, obj)) == NULL) {
-		printf("JS_GetPrivate failed in VrmlBrowserCreateVrmlFromString.\n");
-		return JS_FALSE;
-	}
-
-	if (brow->magic != BROWMAGIC) {
-		printf("Wrong browser magic!\n");
-		return JS_FALSE;
-	}
+	FUNC_INIT
 
 	if (argc == 1 &&
 		JS_ConvertArguments(context, argc, argv, _c_format, &_c)) {
@@ -326,13 +354,14 @@ VrmlBrowserCreateVrmlFromString(JSContext *context, JSObject *obj,
 
 		/* and, make a string that we can use to create the javascript object */
 		strcpy (xstr,"Browser.__ret=new MFNode(");
-		for (count=0; count<ra/2; count += 2) {
-			sprintf (tmpstr,"new SFNode('bubbadata','%d')",nodarr[count*2+1]);
-			strcat (xstr,tmpstr);
+		for (count=0; count<ra; count += 2) {
+			sprintf (tmpstr,"new SFNode('bubba','%d')",nodarr[count*2+1]);
+			strncat (xstr,tmpstr,strlen(tmpstr));
 		}
 		strcat (xstr,")");
 		
-		/* create this value */
+printf ("going to call jsrunScript with %s\n",xstr);
+		/* create this value NOTE: rval is set here. */
 		jsrrunScript(context, obj, xstr, rval);
 
 	} else {
@@ -353,61 +382,143 @@ VrmlBrowserCreateVrmlFromURL(JSContext *context, JSObject *obj, uintN argc, jsva
 	BrowserNative *brow;
 	char *_c,
 		*_c_args = "MFString url, SFNode node, SFString event",
-		*_costr[2],
+		*_costr0,
+		*_costr1,
 		*_c_format = "o o s";
+	uintptr_t nodarr[200];
+	uintptr_t myptr;
+	int ra;
+	char filename[2000];
+	char tfilename [2000];
+	char *tfptr; 
+	char *coptr;
+	char firstBytes[4];
+	char *bfp;
+	char *slashindex;
+	int found;
+	int count;
 
-	if ((brow = (BrowserNative *)JS_GetPrivate(context, obj)) == NULL) {
-		fprintf(stderr,
-				"JS_GetPrivate failed in VrmlBrowserCreateVrmlFromURL.\n");
-		return JS_FALSE;
-	}
+	/* rval is always zero, so lets just set it */
+	*rval = INT_TO_JSVAL(0);
 
-	if (brow->magic != BROWMAGIC) {
-		fprintf(stderr, "Wrong browser magic!\n");
-		return JS_FALSE;
-	}
+	FUNC_INIT
 
-	if (JS_ConvertArguments(context,
-							argc,
-							argv,
-							_c_format,
-							&(_obj[0]), &(_obj[1]), &_c)) {
+	if (JS_ConvertArguments(context, argc, argv, _c_format,
+			&(_obj[0]), &(_obj[1]), &_c)) {
 		if ((_cls[0] = JS_GetClass(_obj[0])) == NULL) {
-			fprintf(stderr,
-					"JS_GetClass failed for arg 0 in VrmlBrowserCreateVrmlFromURL.\n");
+			printf( "JS_GetClass failed for arg 0 in VrmlBrowserCreateVrmlFromURL.\n");
 			return JS_FALSE;
 		}
 		if ((_cls[1] = JS_GetClass(_obj[1])) == NULL) {
-			fprintf(stderr,
-					"JS_GetClass failed for arg 1 in VrmlBrowserCreateVrmlFromURL.\n");
+			printf("JS_GetClass failed for arg 1 in VrmlBrowserCreateVrmlFromURL.\n");
 			return JS_FALSE;
 		}
 		if (memcmp("MFString", (_cls[0])->name, strlen((_cls[0])->name)) != 0 &&
 			memcmp("SFNode", (_cls[1])->name, strlen((_cls[1])->name)) != 0) {
-			fprintf(stderr,
-					"\nIncorrect arguments in VrmlBrowserCreateVrmlFromURL.\n");
+			printf( "Incorrect arguments in VrmlBrowserCreateVrmlFromURL.\n");
 			return JS_FALSE;
 		}
 
 		_str[0] = JS_ValueToString(context, argv[0]);
-		_costr[0] = JS_GetStringBytes(_str[0]);
+		_costr0 = JS_GetStringBytes(_str[0]);
 
 		if (!JS_GetProperty(context, _obj[1], "__handle", &_v)) {
-			fprintf(stderr,
-					"JS_GetProperty failed for \"__handle\" in VrmlBrowserCreateVrmlFromURL.\n");
+			printf("JS_GetProperty failed for \"__handle\" in VrmlBrowserCreateVrmlFromURL.\n");
 			return JS_FALSE;
 		}
 		_str[1] = JS_ValueToString(context, _v);
-		_costr[1] = JS_GetStringBytes(_str[1]);
-printf ("DPCVA cvu\n");/*		doPerlCallMethodVA(brow->sv_js, "jspBrowserCreateVrmlFromURL", "sss", _costr[0], _costr[1], _c);*/
+		_costr1 = JS_GetStringBytes(_str[1]);
+		ra = sscanf (_costr1,"%d",&myptr);
+
+		/* ok - here we have:
+			_costr0	: the url string array; eg: [ "vrml.wrl" ]
+			_costr1	: the handle (memory pointer) of the node to send this to, eg 143203016
+			_c	: the field to send this to, eg: addChildren
+		*/
+
+		/* find a file name that exists. If not, return JS_FALSE */
+		bfp = strdup(BrowserFullPath);
+		/* and strip off the file name, leaving any path */
+		slashindex = (char *) rindex(bfp, ((int) '/'));
+		if (slashindex != NULL) {
+			slashindex ++; /* leave the slash there */
+			*slashindex = 0;
+		} else {bfp[0] = 0;}
+
+		/* go through the elements and find which (if any) url exists */	
+		found = FALSE;
+		coptr = _costr0;
+
+		while (!found) {
+			tfptr = tfilename;
+			/*printf ("start of loop, coptr :%s:\n",coptr); */
+			if (*coptr == '[') coptr++;
+			while ((*coptr != '\0') && (*coptr == ' ')) coptr++;
+			if (*coptr == '\0') {
+				ConsoleMessage ("javascript: could not find a valid url in %s",_costr0);
+				return JS_FALSE;
+			}
+
+			if (*coptr == '"') {
+				coptr++;
+				/* printf ("have the initial quote string here is %s\n",coptr); */
+				while (*coptr != '"') {
+					*tfptr = *coptr;
+					tfptr++; coptr++;
+				}
+				*tfptr = '\0';
+				/* printf ("found string is :%s:\n",tfilename); */
+			}
+
+
+        	        /* we work in absolute filenames... */
+                	makeAbsoluteFileName(filename,bfp,tfilename);
+
+                	if (fileExists(filename,firstBytes,TRUE)) {
+				/* printf ("file exists, break\n"); */
+				found = TRUE;
+        	        } 
+				#ifdef JSVERBOSE
+				else printf ("nope, file %s does not exist\n",filename);
+				#endif
+
+			/* skip along to the start of the next name */
+			if (*coptr == '"') coptr++;
+			if (*coptr == ',') coptr++;
+			if (*coptr == ']') coptr++; /* this allows us to error out, above */
+
+		}
+
+
+		/* call the parser */
+		ra = EAI_CreateVrml("URL",filename,nodarr,200);
+
+		/* now, we make up a string of nodes, pass it to c_set_field_be that
+		takes this string apart. oh well... */
+
+		filename[0] = '\0'; /* just reuse these variables */
+		
+		for (count = 1; count < ra; count +=2) {
+			sprintf (tfilename, "%d,",nodarr[count]);	
+			strcat (filename, tfilename);
+		}
+
+		#ifdef JSVERBOSE
+		printf ("node string is %s\n",filename);
+		#endif
+
+		/* remember the freewrl addChildren removeChildren stuff? */
+		if ((strncmp (_c,"addChildren",strlen("addChildren")) == 0) ||
+		(strncmp (_c,"removeChildren",strlen("removeChildren")) == 0)) {
+			c_set_field_be ((uintptr_t *)myptr, "children", filename);
+		} else {
+			c_set_field_be ((uintptr_t *)myptr, _c, filename);
+		}
+
 	} else {
-		fprintf(stderr,
-				"\nIncorrect argument format for createVrmlFromURL(%s).\n",
-				_c_args);
+		printf( "Incorrect argument format for createVrmlFromURL(%s).\n", _c_args);
 		return JS_FALSE;
 	}
-	*rval = _rval;
-
 	return JS_TRUE;
 }
 
@@ -418,7 +529,7 @@ VrmlBrowserAddRoute(JSContext *context, JSObject *obj, uintN argc, jsval *argv, 
 	jsval _rval = INT_TO_JSVAL(0);
 	if (!doVRMLRoute(context, obj, argc, argv,
 					 "VrmlBrowserAddRoute", "jspBrowserAddRoute", "addRoute")) {
-		fprintf(stderr, "doVRMLRoute failed in VrmlBrowserAddRoute.\n");
+		printf( "doVRMLRoute failed in VrmlBrowserAddRoute.\n");
 		return JS_FALSE;
 	}
 	*rval = _rval;
@@ -468,7 +579,7 @@ VrmlBrowserDeleteRoute(JSContext *context, JSObject *obj, uintN argc, jsval *arg
 	jsval _rval = INT_TO_JSVAL(0);
 	if (!doVRMLRoute(context, obj, argc, argv,
 					 "VrmlBrowserDeleteRoute", "jspBrowserDeleteRoute", "deleteRoute")) {
-		fprintf(stderr, "doVRMLRoute failed in VrmlBrowserDeleteRoute.\n");
+		printf( "doVRMLRoute failed in VrmlBrowserDeleteRoute.\n");
 		return JS_FALSE;
 	}
 	*rval = _rval;
@@ -493,12 +604,8 @@ doVRMLRoute(JSContext *context, JSObject *obj, uintN argc, jsval *argv,
 		*_c_format = "o s o s";
 	size_t len;
 
+	FUNC_INIT
 
-	if ((brow = (BrowserNative *)JS_GetPrivate(context, obj)) == NULL) {
-		printf("JS_GetPrivate failed in doVRMLRoute called from %s.\n",
-				callingFunc);
-		return JS_FALSE;
-	}
 	if (JS_ConvertArguments(context,
 				argc,
 				argv,
